--- a/package.json
+++ b/package.json
@@ -9,12 +9,12 @@
     "lint": "eslint"
   },
   "dependencies": {
-    "@studio-freight/react-lenis": "^0.0.47",
     "@types/js-cookie": "^3.0.6",
     "axios": "^1.13.2",
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.26",
     "js-cookie": "^3.0.5",
+    "lenis": "^1.3.17",
     "lucide-react": "^0.562.0",
     "next": "16.1.1",
     "next-themes": "^0.4.6",
